--- a/demo1.css
+++ b/demo1.css
@@ -1,6 +1,18 @@
+img {
+    max-width: 100%;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 .main-container {
     max-width: 960px;
     margin: auto;
+    display: flex;
+    background-image: url("http://lamcdn.net/lookatme.ru/post_image-image/4EooY08k7cIyPybuOt5ZMg-wide.jpg");
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .site-menu,
@@ -9,7 +21,7 @@
 }
 
 .site-menu {
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
 }
 
 .site-nav {
@@ -21,12 +33,16 @@
 
 .site-nav-item {
     border-bottom: 3px solid black;
-    padding: 10px;    
+    padding: 10px;
+}
+
+#asd {
+
 }
 
 .site-nav-item a {
     color: black;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .site-nav-item:last-child {
@@ -34,7 +50,7 @@
 }
 
 .sidebar {
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
 }
 
 .main-content {
@@ -45,11 +61,12 @@
 .site-menu,
 .main-content,
 .sidebar {
-    float: left;
+    
 }
 
 figure {
-    width: 600px;
+    width: 100%;
+    margin-left: 0;
     border: 4px solid black;
     padding: 5px;
 }
