--- a/assets/stylesheets/demo4.css
+++ b/assets/stylesheets/demo4.css
@@ -59,14 +59,34 @@ table {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	
 }
-.container {
+.container,
+.grid {
 	margin: 0 auto;
-	padding-left: 30px;
-	padding-right: 30px;
 	width: 960px;
 }
+.container {
+	padding-left: 30px;
+	padding-right: 30px;
+}
+.grid,
+.col-1-3,
+.col-2-3 {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+.col-1-3,
+.col-2-3 {
+	display: inline-block;
+	vertical-align: top;
+}
+.col-1-3 {
+	width: 33.33%
+}
+.col-2-3 {
+	width: 66.66%
+}
+
 
 /*
   ========================================
@@ -103,4 +123,49 @@ h1, h3, h4, h5, p {
 
 .hero {
 	padding: 22px 80px 66px 80px;
+}
+
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+
+.group::before,
+.group::after {
+	content: "";
+	display: table;
+}
+.group::after {
+	clear: both;
+}
+.group {
+	clear: both;
+	*zoom: 1; 
+}
+
+/*
+  ========================================
+  Основной заголовок
+  ========================================
+*/
+
+.logo {
+	border-top: 4px solid #648880;
+	padding: 40px 0 22px 0; 
+	float: left;
+}
+
+/*
+  ========================================
+  Основной подвал
+  ========================================
+*/
+
+.primary-footer small {
+	float: left;
+}
+.primary-footer {
+	padding-top: 44px;
+	padding-bottom: 44px;
 }
