--- a/assets/stylesheets/demo4.css
+++ b/assets/stylesheets/demo4.css
@@ -54,10 +54,10 @@ table {
 */
 
 body {
+	background-color: #293f50;
 	color: #888;
 	font: 300 16px/22px "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
 
 /*
   ========================================
@@ -74,6 +74,14 @@ a {
 }
 p a {
 	border-bottom: 1px solid #dfe2e5;
+}
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
 }
 
 /*
@@ -179,6 +187,7 @@ cite, em {
 */
 
 .hero {
+	color: #fff;
 	line-height: 44px;
 	padding: 22px 80px 66px 80px;
 	text-align: center;
