--- a/assets/stylesheets/demo4.css
+++ b/assets/stylesheets/demo4.css
@@ -165,6 +165,20 @@ cite, em {
 
 /*
   ========================================
+  Вступление
+  ========================================
+*/
+
+.lead {
+	text-align: center;
+}
+.lead p {
+	font-size: 21px;
+	line-height: 33px;
+}
+
+/*
+  ========================================
   Кнопки
   ========================================
 */
@@ -236,10 +250,21 @@ cite, em {
   ========================================
 */
 
+.row,
+.row-alt {
+	min-width: 960px;
+}
 .row {
-	color: #fff;
+	background-color: #fff;
 	min-width: 960px;
 	padding: 66px 0 44px 0;
+}
+.row-alt {
+	background: #cbe2c1;
+	background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+	padding: 44px 0 22px 0;  
 }
 
 /*
